# QT_Beginner

Assignment/: CMakeLists.txt  cat.cpp  cat.h  main.cpp
Automatic_Memory_Management/: CMakeLists.txt  main.cpp  test.cpp
Casting_Assignment/: CMakeLists.txt  consumer.cpp  consumer.h  main.cpp  producer.h
Classes/: CMakeLists.txt  animal.cpp  animal.h  main.cpp
Closing_Assignment_Signals_Slots/: CMakeLists.txt  main.cpp  monitor.cpp  monitor.h  test.cpp  test.h
Closing_Assignments/: CMakeLists.txt  main.cpp  monitors.cpp  monitors.h  tests.cpp  tests.h
Disconnect_Slots/: CMakeLists.txt  main.cpp  radio.cpp  station.cpp  station.h
Disconnect_Slots_Signals/: CMakeLists.txt  radio.h  signal.cpp  signal.h
Dog_calc/: CMakeLists.txt  main.cpp
Dog_example/: CMakeLists.txt  dog.cpp  dog.h  main.cpp  owner.cpp
Dynamic_Casting/: CMakeLists.txt  car.cpp  car.h  feline.cpp  feline.h  main.cpp  racecar.cpp  racecar.h
Error_Exceptions/: CMakeLists.txt  main.cpp
Interface/: CMakeLists.txt  Freezer.h  Microwave.h  Toaster.h  appliance.cpp  appliance.h  main.cpp
Pointers_Assignment/: CMakeLists.txt  calc.cpp  main.cpp
QByteArray/: CMakeLists.txt  main.cpp
QList/: CMakeLists.txt  main.cpp
QList_Assignment/: CMakeLists.txt  main.cpp
QMap/: CMakeLists.txt  main.cpp  pet.cpp  pet.h
QObject/: CMakeLists.txt
QObject1/: CMakeLists.txt  cat.cpp  dog.cpp  dog.h  main.cpp
QObject_Cast/: CMakeLists.txt
QObjects_cannot_be_copied/: CMakeLists.txt  main.cpp
QString/: CMakeLists.txt  main.cpp
QStringLists/: CMakeLists.txt  main.cpp
QVariant/: CMakeLists.txt  (+1 more)
(+200 files in other folders)
